--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WhatSoup</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_week">Semaine</string>
+    <string name="title_dashboard">Favoris</string>
+    <string name="title_notifications">Réglages</string>
 </resources>
