--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="title_week">Menu</string>
     <string name="title_template">Modele</string>
     <string name="button_generate">Generate</string>
+    <string name="button_default">Reset</string>
 </resources>
