add individual generations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="button_setweek">SAVE</string>
     <string name="button_getweek">LOAD</string>
     <string name="button_share">SHARE</string>
+    <string name="button_generate_meal">GENE</string>
+    <string name="button_generate_composition">RATE</string>
 </resources>
